--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,19 @@ requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-    # "frappe~=15.0.0" # Installed and managed by bench.
+    # Core dependencies
+    "Unidecode~=1.4.0",
+    "barcodenumber~=0.5.0",
+    "rapidfuzz~=3.12.2",
+    "holidays~=0.75",
+    # integration dependencies
+    "googlemaps~=4.10.0",
+    "plaid-python~=7.2.1",
+    "python-youtube~=0.9.7",
+    # Not used directly - required by PyQRCode for PNG generation
+    "pypng~=0.20220715.0",
+    # MT940 parser for bank statements
+    "mt-940>=4.26.0"
 ]
 
 [build-system]
